syntax = "proto3";

package broprox;
option java_package = "no.nb.nna.broprox.api";
//option java_multiple_files = true;
option java_outer_classname = "ContentWriterProto";

import "messages.proto";

// Service for writing archival data to persisten storage.
service ContentWriter {
    rpc write (stream WriteRequest) returns (WriteReply) {}
}

message WriteRequest {
    oneof value {
        CrawlLog crawl_log = 1;
        bytes header = 2;
        bytes payload = 3;
    }
}

message WriteReply {
    string storage_ref = 1;
}
